# lazytf

./: .gitignore  Cargo.toml  Config.yaml  README.md
.github/workflows/: release.yml
docs/: HOMEBREW_RELEASE.md
packaging/homebrew/: lazytf.rb.template
src/: main.rs
