[package]
name = "lazytf"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
glob = "0.3.3"
nix = { version = "0.29.0", features = ["signal", "process"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
